Bug 166161 - White dot on "Map overview" floater disappears when moving over a pole
Summary: White dot on "Map overview" floater disappears when moving over a pole
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Torsten Rahn
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-09 19:11 UTC by Henry de Valence
Modified: 2008-07-11 18:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Henry de Valence 2008-07-09 19:11:41 UTC
Version:            (using Devel)
Installed from:    Compiled sources
Compiler:          g++ (GCC) 4.2.3 (Ubuntu 4.2.3-2ubuntu7) 
OS:                Linux

When the view is moved over one of the poles, the white dot which marks the centre of the view goes of the map and disappears. If you move the map over the poles but then move back the same way, it will reappear.
Comment 1 Patrick Spendrin 2008-07-11 18:12:40 UTC
fixed by the reporter himself