Add a new function, GeoDataPoint::normalizeLonLat( double &lon, double &lat ) and made the map overview call it first before calculating. The reason you would use this instead of just calling both normalize functions is that this take into accout the effects that they have on each other; eg if the north pole is crossed, the longitude should be inverted. Also fixes some holes in the math of the previous GeoDataPoint::normalizeLat( double lat ) which allowed certain conditions to let invalid values escape.

The main practical effect of this for now is that the white dot disappearing thing now doesn't  happen

BUG:166161

svn path=/trunk/KDE/kdeedu/marble/; revision=830717